Bug fixes for Release 1.0.0
Added custom type engine with maps the driver dictionary response to models. The conversion is done with IL.

--- a/Neo4jObjectMapper/Neo4jObjectMapper.csproj
+++ b/Neo4jObjectMapper/Neo4jObjectMapper.csproj
@@ -19,6 +19,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Neo4j.Driver" Version="4.0.0" />
+    <PackageReference Include="System.Reflection.Emit.ILGeneration" Version="4.7.0" />
+    <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\Users\Robin\Desktop\NOM Images\logo.png">
