--- a/Neo4jObjectMapper/Neo4jObjectMapper.csproj
+++ b/Neo4jObjectMapper/Neo4jObjectMapper.csproj
@@ -3,12 +3,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>Neo4j Object Mapper</Title>
     <PackageId>Neo4jObjectMapper</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>Robin Kooyman</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>This is a small package which wraps the Neo4j official driver in an Object Mapper. For more information on how to use it, go to https://github.com/robinskil/Neo4jObjectMapper/wiki . This is the first release of this package. It's an open source project so feedback and improvements are always welcome. If there are any issues please contact through github.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReleaseNotes>Initial 1.0.0 release</PackageReleaseNotes>
+    <PackageReleaseNotes>Release 1.0.1 with bug fixes and faster type conversion to models.</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/robinskil/Neo4jObjectMapper</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageIcon>logo.png</PackageIcon>
