--- a/Neo4jObjectMapper/Neo4jObjectMapper.csproj
+++ b/Neo4jObjectMapper/Neo4jObjectMapper.csproj
@@ -6,7 +6,7 @@
     <Version>1.0.2</Version>
     <Authors>Robin Kooyman</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Description>This is a library which wraps the Neo4j official driver in an Object Mapper. For more information on how to use it, go to https://github.com/robinskil/Neo4jObjectMapper . This is the first release of this package. It's an open source project so feedback and improvements are always welcome. If there are any issues please contact me through github.</Description>
+    <Description>This is a library which wraps the Neo4j official driver in a simplified interface with an Object Mapper. It allows developers to use POCO's to query the neo4j database. No extensive setup is needed to use this library. For more information on how to use it, go to https://github.com/robinskil/Neo4jObjectMapper . This an open source project so feedback and improvements are always welcome. If there are any issues please contact me through github.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReleaseNotes>Release 1.0.2 with stability bug fixes.</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/robinskil/Neo4jObjectMapper</PackageProjectUrl>
